# py-reg

./: .gitignore  LICENSE  README.md  converter.py  core.py  data_structures.py  dfa.py  main.py  match.py  nfa.py  parser.py  pyproject.toml  pyreg.py  requirements.txt  simplify.py  symbol.py  test_main.py  test_pyreg.py  test_simplification.py  utils.py
.github/workflows/: python-app.yml  rust.yml
benchmark/: bench.ipynb
benchmark/.ipynb_checkpoints/: bench-checkpoint.ipynb
reg_rust/: Cargo.toml
reg_rust/src/: benchmark.rs  fsm.rs  lib.rs  main.rs  matching.rs  nom_parser.rs  parse.rs  parser.rs  utils.rs  vm.rs
src/: __init__.py  backtracking_matcher.py  converter.py  core.py  fsm.py  match.py  matcher.py  matching.py  nfa_matcher.py  optimizer.py  parser.py  pike_vm.py  serializer.py  unionfind.py  utils.py  vm.py
src/reg/: CHANGES.md  fsm.py  main.py  matcher.py  nfa_matcher.py  optimizer.py  parser.py  pike_vm.py  utils.py
tests/: test_backtracking.py  test_dfa.py  test_epsilon_reduction_regression.py  test_non_backtracking.py  test_pike_vm.py  test_pyreg.py  test_simplification.py
