[package]
name = "reg_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
bitflags = "1.3.2"
colored = "2.0.0"
regex = "1.7.1"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
path = "src/benchmark.rs"